Fix build error